# DeviceTree

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  tests.rs  utils.rs
src/fdt/: blob.rs  header.rs  mod.rs  parsing.rs
src/tests/: blob.rs  mod.rs  node.rs  prop.rs  tree.rs  utils.rs
src/tests/dtb/: test1.dtb
src/tree/: mod.rs  node.rs  prop.rs  tree.rs
