[package]
name = "devicetree"
version = "0.1.1"
edition = "2021"
authors = ["Yu Duan <yu_duan@yahoo.com>"]
readme = "README.md"
repository = "https://github.com/duanyu-yu/DeviceTree"
license = "Apache-2.0"
description = "Devicetree parsing tool"
keywords = ["devicetree", "dtb", "fdt"]
exclude = [
    "tests/*",
    "./gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
log = "0.4"
